--- a/configs/172.28.247.102.conf
+++ b/configs/172.28.247.102.conf
@@ -1,10 +1,6 @@
-WTF-3850-02#sho run
-Building configuration...
-
-Current configuration : 30785 bytes
 !
-! Last configuration change at 13:28:51 PDT Wed Dec 9 2020 by admin
-! NVRAM config last updated at 16:38:25 PDT Fri Oct 30 2020 by admin
+
+
 !
 version 16.9
 no service pad
@@ -15,7 +11,7 @@ service compress-config
 service call-home
 no platform punt-keepalive disable-kernel-core
 !
-hostname WTF-3850-02
+hostname PDX-3850-02
 !
 !
 vrf definition CP-Test
@@ -39,16 +35,16 @@ vrf definition Mgmt-vrf
  exit-address-family
 !
 logging buffered 16384
-enable secret 5 blahblah
+enable secret 5 $1$yN0T$lD8G1lXrfzOzXOxE.eJbK/
 !
 aaa new-model
 !
 !
 aaa group server radius ISE
- server name 10.4.87.25
+ server name 172.28.87.25
 !
 aaa group server tacacs+ tacgroup1
- server name 10.4.87.25
+ server name 172.28.87.25
  timeout 10
 !
 aaa authentication login default local group tacgroup1
@@ -69,7 +65,7 @@ aaa accounting commands 15 default stop-only group tacgroup1
 !
 !
 aaa server radius dynamic-author
- client 10.4.87.25 server-key 7 blahblah
+ client 172.28.87.25 server-key 7 15355B0002297B313A2066
 !
 aaa session-id common
 clock timezone PDT -8 0
@@ -100,14 +96,14 @@ ip nbar http-services
 !
 ip multicast-routing 
 ip multicast multipath
-ip name-server 10.4.2.201
-ip domain name cnetWTF.lab
-ip dhcp excluded-address 10.4.253.1
+ip name-server 172.28.2.201
+ip domain name cnetpdx.lab
+ip dhcp excluded-address 172.28.253.1
 !
 ip dhcp pool VLAN553-Pool
- network 10.4.253.0 255.255.255.0
- dns-server 10.4.2.201 10.4.2.202 
- default-router 10.4.253.1 
+ network 172.28.253.0 255.255.255.0
+ dns-server 172.28.2.201 172.28.2.202 
+ default-router 172.28.253.1 
 !
 !
 !
@@ -164,7 +160,7 @@ access-session accounting attributes filter-spec include list Def_Acct_List
 access-session mac-move deny
 access-session acl default passthrough
 device-tracking tracking
-!         
+!
 device-tracking policy IPDT_MAX_10
  limit address-count 10
  no protocol udp
@@ -205,7 +201,7 @@ table-map AutoConf-4.0-Trust-Cos-Table
  default copy
 table-map AutoConf-4.0-Trust-Dscp-Table
  default copy
-!         
+!
 !
 crypto pki trustpoint TP-self-signed-1725069377
  enrollment selfsigned
@@ -252,7 +248,7 @@ crypto pki certificate chain TP-self-signed-1725069377
   76438DD7 5DBEC996 2A6168CB 07A494B1 82D003BD 5DE83C85 BD38635B FCE7DACB 
   42AF4045 B55F0106 6EF749F5 96D5444B 1F4878D0 6D310C7A 27971937 9B714104 
   9AD893DD FFC5F448 DE381977 FAE84E4E 70F8C4EC
-        quit
+  	quit
 crypto pki certificate chain DNAC-CA
  certificate ca 0093C0099B175FDA01
   308202F7 308201DF A0030201 02020900 93C0099B 175FDA01 300D0609 2A864886 
@@ -279,7 +275,7 @@ crypto pki certificate chain DNAC-CA
   FC1CDEBA CFDF9CC9 D829318F 35A97E81 C16D403C 3287DD3F 5E6A802F 9F98BF37 
   13665C89 423B5F2C 15B313FA DAC8ACAB A7DB4F11 E43B6563 37865678 A280EB4C 
   CFAE1A40 7ECC4C2F 68D4FEF7 D9F786A9 CA3987A5 3B761ED0 FE4797
-        quit
+  	quit
 crypto pki certificate chain SLA-TrustPoint
  certificate ca 01
   30820321 30820209 A0030201 02020101 300D0609 2A864886 F70D0101 0B050030 
@@ -308,13 +304,13 @@ crypto pki certificate chain SLA-TrustPoint
   80DDCD16 D6BACECA EEBC7CF9 8428787B 35202CDC 60E4616A B623CDBD 230E3AFB 
   418616A9 4093E049 4D10AB75 27E86F73 932E35B5 8862FDAE 0275156F 719BB2F0 
   D697DF7F 28
-        quit
+  	quit
 !
 crypto pki certificate pool
  cabundle nvram:ios_core.p7b
 !
 cts sxp enable
-cts sxp connection peer 10.4.254.1 password none mode local speaker hold-time 0
+cts sxp connection peer 172.28.254.1 password none mode local speaker hold-time 0
 service-template webauth-global-inactive
  inactivity-timer 3600 
 service-template CRITICAL_AUTH_VLAN_Gi1/0/13
@@ -369,7 +365,7 @@ vlan 13
 vlan 100
  name Test_PA_Outside
 !
-vlan 101  
+vlan 101
  name Test_PA_Inside
 !
 vlan 428
@@ -739,7 +735,7 @@ template BB_PC_Port
 !
 !
 interface Loopback0
- ip address 10.4.247.102 255.255.255.255
+ ip address 172.28.247.102 255.255.255.255
  ip pim sparse-mode
  ip router isis 
 !
@@ -757,7 +753,7 @@ interface GigabitEthernet0/0
 !
 interface GigabitEthernet1/0/1
  no switchport
- ip address 10.4.248.202 255.255.255.252
+ ip address 172.28.248.202 255.255.255.252
  ip router isis 
  bfd interval 500 min_rx 500 multiplier 3
  no isis hello padding
@@ -818,6 +814,8 @@ interface GigabitEthernet1/0/13
  description PACIFIC-U-STAGING
  switchport access vlan 428
  switchport mode access
+ mab
+ dot1x pae authenticator
 !
 interface GigabitEthernet1/0/14
  description PACIFIC-U-STAGING
@@ -907,10 +905,10 @@ interface Vlan432
 !
 interface Vlan554
  description mgmt-lan
- ip address 10.4.254.32 255.255.255.0
+ ip address 172.28.254.32 255.255.255.0
 !
 interface Vlan802
- ip address 10.4.248.18 255.255.255.248
+ ip address 172.28.248.18 255.255.255.248
  ip mtu 1500
  ip router isis 
  bfd interval 500 min_rx 500 multiplier 3
@@ -928,29 +926,29 @@ ip forward-protocol nd
 ip pim ssm default
 ip tcp mss 1350
 no ip http server
-ip http access-class ipv4 WTF-NET
+ip http access-class ipv4 PDX-NET
 ip http authentication aaa login-authentication default
 ip http authentication aaa exec-authorization default
 ip http authentication aaa command-authorization 15 default
 ip http secure-server
 ip http client source-interface Loopback0
 ip tftp source-interface Loopback0
-ip route 0.0.0.0 0.0.0.0 10.4.254.1
-ip route vrf LOCTEST 0.0.0.0 0.0.0.0 10.4.202.1
+ip route 0.0.0.0 0.0.0.0 172.28.254.1
+ip route vrf LOCTEST 0.0.0.0 0.0.0.0 172.28.202.1
 ip tacacs source-interface Vlan554 
 ip ssh source-interface Loopback0
 ip ssh version 2
 ip scp server enable
 !
 ip bgp-community new-format
-!         
+!
 ip access-list extended ACL-DEFAULT
- permit ip any host 10.4.2.201
- permit ip any host 10.4.2.202
+ permit ip any host 172.28.2.201
+ permit ip any host 172.28.2.202
  permit udp any any eq domain
  permit udp any eq bootpc any eq bootps
- permit tcp any host 10.4.77.25 eq 8443
- permit tcp any host 10.4.77.26 eq 8443
+ permit tcp any host 172.28.77.25 eq 8443
+ permit tcp any host 172.28.77.26 eq 8443
  permit icmp any any echo
  permit icmp any any echo-reply
  permit tcp any any eq 3389
@@ -978,8 +976,8 @@ snmp-server community G0lfc0urs3 RO
 snmp-server host 10.10.20.154 version 2c tesseract-traps 
 snmp ifmib ifindex persist
 tacacs-server timeout 10
-tacacs server 10.4.87.25
- address ipv4 10.4.87.25
+tacacs server 172.28.87.25
+ address ipv4 172.28.87.25
  key 7 0023430A02585B131D321F
 !
 radius-server attribute 6 on-for-login-auth
@@ -989,8 +987,8 @@ radius-server attribute 25 access-request include
 radius-server dead-criteria time 30 tries 3
 radius-server deadtime 1
 !
-radius server 10.4.87.25
- address ipv4 10.4.87.25 auth-port 1645 acct-port 1646
+radius server 172.28.87.25
+ address ipv4 172.28.87.25 auth-port 1645 acct-port 1646
  automate-tester username radtest probe-on
  key 7 07287140480A4910050158
 !
