--- a/configs/172.28.247.100.conf
+++ b/configs/172.28.247.100.conf
@@ -1,10 +1,6 @@
-WTF-3850-CORE#sho run
-Building configuration...
-
-Current configuration : 31680 bytes
 !
-! Last configuration change at 06:22:45 PDT Tue Dec 22 2020 by admin
-! NVRAM config last updated at 06:22:46 PDT Tue Dec 22 2020 by admin
+
+
 !
 version 16.6
 no service pad
@@ -14,7 +10,7 @@ service password-encryption
 service compress-config
 no platform punt-keepalive disable-kernel-core
 !
-hostname WTF-3850-CORE
+hostname PDX-3850-CORE
 !
 !
 vrf definition AWS-Test
@@ -47,7 +43,7 @@ vrf definition vrf2
  exit-address-family
 !
 logging buffered informational
-enable secret 4 blahblah
+enable secret 4 tB0F8HekQE8dP4ibaHSqhBI8IVFRD7GWUP9pQu0anZ6
 !
 aaa new-model
 !
@@ -74,40 +70,40 @@ switch 2 provision ws-c3850-24t
 !
 ip routing
 !
-ip name-server 10.4.2.201
-ip domain name cnetWTF.lab
+ip name-server 172.28.2.201
+ip domain name cnetpdx.lab
 no ip dhcp conflict logging
-ip dhcp excluded-address 10.4.128.1
-ip dhcp excluded-address 10.4.129.1
-ip dhcp excluded-address 10.4.133.1
+ip dhcp excluded-address 172.28.128.1
+ip dhcp excluded-address 172.28.129.1
+ip dhcp excluded-address 172.28.133.1
 !
 ip dhcp pool VLAN428-Pool
- network 10.4.128.0 255.255.255.0
- dns-server 10.4.2.201 
- default-router 10.4.128.1 
+ network 172.28.128.0 255.255.255.0
+ dns-server 172.28.2.201 
+ default-router 172.28.128.1 
 !
 ip dhcp pool VLAN429-Pool
- network 10.4.129.0 255.255.255.0
- dns-server 10.4.2.201 
+ network 172.28.129.0 255.255.255.0
+ dns-server 172.28.2.201 
  option 43 hex f104.ac1c.4d20
  option 60 ascii "Cisco AP c3600"
 !
 ip dhcp pool VLAN430-Pool
- network 10.4.130.0 255.255.255.0
- dns-server 10.4.2.201 
- default-router 10.4.130.1 
+ network 172.28.130.0 255.255.255.0
+ dns-server 172.28.2.201 
+ default-router 172.28.130.1 
  option 43 hex f104.ac1c.4d20
  option 60 ascii "Cisco AP c3602"
 !
 ip dhcp pool VLAN431-Pool
- network 10.4.131.0 255.255.255.0
- dns-server 10.4.2.201 10.4.2.202 
- default-router 10.4.131.1 
+ network 172.28.131.0 255.255.255.0
+ dns-server 172.28.2.201 172.28.2.202 
+ default-router 172.28.131.1 
 !
 ip dhcp pool VLAN433-Pool
- network 10.4.133.0 255.255.255.0
- default-router 10.4.133.1 
- dns-server 10.4.2.201 10.4.2.202 
+ network 172.28.133.0 255.255.255.0
+ default-router 172.28.133.1 
+ dns-server 172.28.2.201 172.28.2.202 
 !
 ip dhcp pool Guest
  vrf Guest-test
@@ -116,9 +112,9 @@ ip dhcp pool Guest
  default-router 192.168.70.2 
 !
 ip dhcp pool VLAN432-Pool
- network 10.4.132.0 255.255.255.0
- dns-server 10.4.2.201 
- default-router 10.4.132.1 
+ network 172.28.132.0 255.255.255.0
+ dns-server 172.28.2.201 
+ default-router 172.28.132.1 
 !
 !
 !
@@ -181,7 +177,7 @@ flow record LIVEACTION-FLOWRECORD-EGRESS
 !
 flow exporter LIVEACTION-FLOWEXPORTER
  description DO NOT MODIFY. USED BY LIVEACTION.
- destination 10.4.87.89
+ destination 172.28.87.89
  source Vlan300
  transport udp 2055
  option interface-table
@@ -223,8 +219,84 @@ crypto pki trustpoint DNAC-CA
  revocation-check crl none
 !
 !
+crypto pki certificate chain TP-self-signed-4076725208
+ certificate self-signed 01
+  3082024F 308201B8 A0030201 02020101 300D0609 2A864886 F70D0101 04050030 
+  31312F30 2D060355 04031326 494F532D 53656C66 2D536967 6E65642D 43657274 
+  69666963 6174652D 34303736 37323532 3038301E 170D3137 30343130 30393032 
+  35335A17 0D323030 31303130 30303030 305A3031 312F302D 06035504 03132649 
+  4F532D53 656C662D 5369676E 65642D43 65727469 66696361 74652D34 30373637 
+  32353230 3830819F 300D0609 2A864886 F70D0101 01050003 818D0030 81890281 
+  8100B183 772ED51A 13665FF5 F4178A34 1FE886FF 7A6C5474 02F5651F D9CFC7FC 
+  D02CB899 1ADA18E1 27E65916 413A04E4 0ACD157D 1DF0D04E 79D73196 270A42AC 
+  970F8FF8 561BEA91 975CEFD1 2E3248EE 5DA000E9 B8BEA4CB 32AF22B6 E5992BFE 
+  0641A53A 2E4C29D5 1E2F0A48 ACE72F05 38732CA2 36EF658B A6B87771 3D080F1D 
+  B0190203 010001A3 77307530 0F060355 1D130101 FF040530 030101FF 30220603 
+  551D1104 1B301982 17706478 6C2D3338 35302E63 6E65746C 61622E6C 6F63616C 
+  301F0603 551D2304 18301680 1426F230 8617A702 B3189FC2 BE17EF50 7B2F90FC 
+  19301D06 03551D0E 04160414 26F23086 17A702B3 189FC2BE 17EF507B 2F90FC19 
+  300D0609 2A864886 F70D0101 04050003 81810040 5C0D0587 49449B38 0180224B 
+  14B8B627 56C3828B 41F055D2 5CFCC5F2 12533758 15E82B9A 384F94BD F9F1314B 
+  0ADBD6A7 14AC8BE8 A1CF88EC D97A3949 C97A4FA5 B95275EB A676C0F2 66527EFA 
+  C28A8D26 88E584B5 FA8B4938 634DC167 2EB97149 9C2ECF42 9B145013 3B3406E5 
+  F8E8442B 198E0B0B 4699D64A 356AC28A 1ABC41
+  	quit
+crypto pki certificate chain pnplabel
+ certificate ca 0093C0099B175FDA01
+  308202F7 308201DF A0030201 02020900 93C0099B 175FDA01 300D0609 2A864886 
+  F70D0101 0B050030 12311030 0E060355 04030C07 6B756265 2D636130 1E170D31 
+  38303932 35313433 3733385A 170D3231 30363231 31343337 33385A30 12311030 
+  0E060355 04030C07 6B756265 2D636130 82012230 0D06092A 864886F7 0D010101 
+  05000382 010F0030 82010A02 82010100 F1F7287B DBA56CF9 4C10BF05 7AB7D18F 
+  4B83FCAF 7FF91E53 4282DC92 59D3ACE5 C06E0AE0 855FF468 2D433CD6 6421DF7A 
+  9A696236 BB04F563 F70D95C7 EFC5977A 95ECCA70 56B65444 46A84584 97A2457B 
+  09FBD6FD 8078F2A8 90763F98 12AB63D7 C0126255 A419AA36 8E0530E5 C008AC04 
+  321635EE DFD33943 59BBFDD3 C65B3381 1B3AD298 67AD782F F73BE4A9 8839BC07 
+  D8DB68D8 31A65A75 E45F8A00 1425D863 1C8D2242 C548AD75 D007D3A8 08816EC2 
+  7B5F01D0 36ECBA65 E2CE81D8 127FDB4E 47478136 308C2510 8C57C94B 1301B877 
+  2BA874D2 F36479B0 2EFBBD70 F04C06EB 656F953E 75C83558 B307A603 8289BBBB 
+  DC48181D CD6D030B F5A0C8AB 10F733B1 02030100 01A35030 4E301D06 03551D0E 
+  04160414 35FEDC2A 8EFA93E4 4E9D4F6B F9BA56C3 6495D68F 301F0603 551D2304 
+  18301680 1435FEDC 2A8EFA93 E44E9D4F 6BF9BA56 C36495D6 8F300C06 03551D13 
+  04053003 0101FF30 0D06092A 864886F7 0D01010B 05000382 010100F0 538BC918 
+  1A39B86E FB498C8F 2FEA82B1 3F3424A0 1A0961FB 13CCBDEF E518AF68 EDD4F59D 
+  EACA512C 0CA1E5B5 593FA65C 44A2E7B3 C9CF8973 9A18957A 2CE19D4F 3802FDE5 
+  1CF70EF4 962F7308 517B55F7 6EBE641C 1F8D691A 05939703 7FC7FB15 733556BC 
+  F0E2E4C7 67C3375C 9224A1E1 63698CAF 7EC1596E 01D87F1C D8ED9D0F 905C66E6 
+  293E1283 5AB277B1 5E89A70B FF62A147 F470D236 177D8A72 A0012A10 8A86FF15 
+  FC1CDEBA CFDF9CC9 D829318F 35A97E81 C16D403C 3287DD3F 5E6A802F 9F98BF37 
+  13665C89 423B5F2C 15B313FA DAC8ACAB A7DB4F11 E43B6563 37865678 A280EB4C 
+  CFAE1A40 7ECC4C2F 68D4FEF7 D9F786A9 CA3987A5 3B761ED0 FE4797
+  	quit
+crypto pki certificate chain DNAC-CA
+ certificate ca 0093C0099B175FDA01
+  308202F7 308201DF A0030201 02020900 93C0099B 175FDA01 300D0609 2A864886 
+  F70D0101 0B050030 12311030 0E060355 04030C07 6B756265 2D636130 1E170D31 
+  38303932 35313433 3733385A 170D3231 30363231 31343337 33385A30 12311030 
+  0E060355 04030C07 6B756265 2D636130 82012230 0D06092A 864886F7 0D010101 
+  05000382 010F0030 82010A02 82010100 F1F7287B DBA56CF9 4C10BF05 7AB7D18F 
+  4B83FCAF 7FF91E53 4282DC92 59D3ACE5 C06E0AE0 855FF468 2D433CD6 6421DF7A 
+  9A696236 BB04F563 F70D95C7 EFC5977A 95ECCA70 56B65444 46A84584 97A2457B 
+  09FBD6FD 8078F2A8 90763F98 12AB63D7 C0126255 A419AA36 8E0530E5 C008AC04 
+  321635EE DFD33943 59BBFDD3 C65B3381 1B3AD298 67AD782F F73BE4A9 8839BC07 
+  D8DB68D8 31A65A75 E45F8A00 1425D863 1C8D2242 C548AD75 D007D3A8 08816EC2 
+  7B5F01D0 36ECBA65 E2CE81D8 127FDB4E 47478136 308C2510 8C57C94B 1301B877 
+  2BA874D2 F36479B0 2EFBBD70 F04C06EB 656F953E 75C83558 B307A603 8289BBBB 
+  DC48181D CD6D030B F5A0C8AB 10F733B1 02030100 01A35030 4E301D06 03551D0E 
+  04160414 35FEDC2A 8EFA93E4 4E9D4F6B F9BA56C3 6495D68F 301F0603 551D2304 
+  18301680 1435FEDC 2A8EFA93 E44E9D4F 6BF9BA56 C36495D6 8F300C06 03551D13 
+  04053003 0101FF30 0D06092A 864886F7 0D01010B 05000382 010100F0 538BC918 
+  1A39B86E FB498C8F 2FEA82B1 3F3424A0 1A0961FB 13CCBDEF E518AF68 EDD4F59D 
+  EACA512C 0CA1E5B5 593FA65C 44A2E7B3 C9CF8973 9A18957A 2CE19D4F 3802FDE5 
+  1CF70EF4 962F7308 517B55F7 6EBE641C 1F8D691A 05939703 7FC7FB15 733556BC 
+  F0E2E4C7 67C3375C 9224A1E1 63698CAF 7EC1596E 01D87F1C D8ED9D0F 905C66E6 
+  293E1283 5AB277B1 5E89A70B FF62A147 F470D236 177D8A72 A0012A10 8A86FF15 
+  FC1CDEBA CFDF9CC9 D829318F 35A97E81 C16D403C 3287DD3F 5E6A802F 9F98BF37 
+  13665C89 423B5F2C 15B313FA DAC8ACAB A7DB4F11 E43B6563 37865678 A280EB4C 
+  CFAE1A40 7ECC4C2F 68D4FEF7 D9F786A9 CA3987A5 3B761ED0 FE4797
+  	quit
 !
-cts sxp connection peer 10.4.254.32 password none mode local listener hold-time 0 0
+cts sxp connection peer 172.28.254.32 password none mode local listener hold-time 0 0
 cts sxp connection peer 192.168.1.2 password none mode local speaker hold-time 0
 cts sxp connection peer 192.168.1.6 password none mode local speaker hold-time 0
 service-template webauth-global-inactive
@@ -242,9 +314,9 @@ diagnostic bootup level minimal
 spanning-tree mode rapid-pvst
 spanning-tree extend system-id
 !
-username admin privilege 15 secret 4 blahblah
-username netadmin privilege 15 secret 5 blahblah
-username webadmin privilege 15 secret 5 blahblah
+username admin privilege 15 secret 4 tB0F8HekQE8dP4ibaHSqhBI8IVFRD7GWUP9pQu0anZ6
+username netadmin privilege 15 secret 5 $1$.Qc/$Su5kPYlrL.9s7bBTnMIEK1
+username webadmin privilege 15 secret 5 $1$TCXb$arRNT0Tp7Yj4jS1XAMFNs1
 !
 redundancy
  mode sso
@@ -254,6 +326,12 @@ hw-switch switch 1 logging onboard message
 hw-switch switch 2 logging onboard message
 !
 vlan 15-16,101-102 
+!
+vlan 298
+ name LAB-DMZ
+!
+vlan 299
+ name LAB-EDGE-FW-OUTSIDE
 !
 vlan 300
  name L3-TO-CORP
@@ -287,6 +365,39 @@ vlan 432
 !
 vlan 433
  name critical_auth
+!
+vlan 521
+ name poli-wlan-endp-grp1
+!
+vlan 540
+ name AUTOMATION
+!
+vlan 554
+ name Lab-Core-Mgmt
+!
+vlan 601
+ name Edge-Firewalls
+!
+vlan 602
+ name L3-to-5548A
+!
+vlan 603
+ name L3-to-5548B
+!
+vlan 701
+ name test
+!
+vlan 801
+ name L3-TO-3850-01
+!
+vlan 802
+ name L3-TO-3850-02
+!
+vlan 999
+ name blackhole
+!
+vlan 2200
+ name matt
 lldp run
 !
 !
@@ -420,7 +531,7 @@ policy-map port_child_policy
 !
 !
 interface Loopback0
- ip address 10.4.247.100 255.255.255.255
+ ip address 172.28.247.100 255.255.255.255
  ip mtu 1500
  ip router isis 
  ip ospf 10 area 0
@@ -430,7 +541,7 @@ interface Loopback88
 !
 interface Loopback99
  description GlobalProtect-Ping-Test
- ip address 10.4.99.255 255.255.255.255
+ ip address 172.28.99.255 255.255.255.255
 !
 interface Port-channel1
  switchport mode trunk
@@ -620,13 +731,13 @@ interface GigabitEthernet2/0/4
 interface GigabitEthernet2/0/5
 !
 interface GigabitEthernet2/0/6
- description WTF-LAB-4331-01_g0/0/1
+ description PDX-LAB-4331-01_g0/0/1
  switchport trunk allowed vlan 298,429,430
  switchport mode trunk
  ip device tracking maximum 10
 !
 interface GigabitEthernet2/0/7
- description WTF-LAB-4331-01_g0/0/0
+ description PDX-LAB-4331-01_g0/0/0
  switchport access vlan 387
  switchport mode access
  shutdown
@@ -727,7 +838,7 @@ interface TenGigabitEthernet2/1/2
  channel-group 1 mode active
 !
 interface TenGigabitEthernet2/1/3
- description TO-WTFL-5548-A
+ description TO-PDXL-5548-A
  switchport trunk allowed vlan 298,387,388,602
  switchport mode trunk
 !
@@ -740,7 +851,7 @@ interface Vlan1
 !
 interface Vlan3
  ip address 10.1.3.1 255.255.255.0
- ip helper-address 10.4.77.10
+ ip helper-address 172.28.77.10
  ip ospf 10 area 0
 !
 interface Vlan101
@@ -757,81 +868,81 @@ interface Vlan102
 !
 interface Vlan300
  description Connection to Corp
- ip address 10.4.0.14 255.255.255.240
+ ip address 172.28.0.14 255.255.255.240
 !
 interface Vlan305
- ip address 10.4.5.9 255.255.255.0
+ ip address 172.28.5.9 255.255.255.0
  ip ospf 10 area 0
 !
 interface Vlan377
  no ip address
 !
 interface Vlan428
- ip address 10.4.128.1 255.255.255.0
+ ip address 172.28.128.1 255.255.255.0
 !
 interface Vlan429
- ip address 10.4.129.1 255.255.255.0
+ ip address 172.28.129.1 255.255.255.0
  shutdown
 !
 interface Vlan430
  description BB-TEST-AP
- ip address 10.4.130.1 255.255.255.0
+ ip address 172.28.130.1 255.255.255.0
  shutdown
 !
 interface Vlan431
  description BB-WIFI-DODGERS
- ip address 10.4.131.1 255.255.255.0
+ ip address 172.28.131.1 255.255.255.0
  shutdown
 !
 interface Vlan432
  description Guest-Test
- ip address 10.4.132.1 255.255.255.0
+ ip address 172.28.132.1 255.255.255.0
  shutdown
 !
 interface Vlan433
- ip address 10.4.133.1 255.255.255.0
+ ip address 172.28.133.1 255.255.255.0
  shutdown
 !
 interface Vlan521
- ip address 10.4.221.1 255.255.255.0
- ip helper-address 10.4.2.201
+ ip address 172.28.221.1 255.255.255.0
+ ip helper-address 172.28.2.201
  ip ospf 10 area 0
 !
 interface Vlan522
- ip address 10.4.222.1 255.255.255.0
- ip helper-address 10.4.2.201
+ ip address 172.28.222.1 255.255.255.0
+ ip helper-address 172.28.2.201
  ip ospf 10 area 0
 !
 interface Vlan523
- ip address 10.4.223.1 255.255.255.0
- ip helper-address 10.4.2.201
+ ip address 172.28.223.1 255.255.255.0
+ ip helper-address 172.28.2.201
  ip ospf 10 area 0
 !
 interface Vlan540
- ip address 10.4.240.1 255.255.255.0
- ip helper-address 10.4.77.10
+ ip address 172.28.240.1 255.255.255.0
+ ip helper-address 172.28.77.10
  ip ospf 10 area 0
 !
 interface Vlan554
- ip address 10.4.254.1 255.255.255.0
- ip helper-address 10.4.2.201
+ ip address 172.28.254.1 255.255.255.0
+ ip helper-address 172.28.2.201
  ip ospf 10 area 0
 !
 interface Vlan601
  description External-VLAN
- ip address 10.4.6.1 255.255.255.248
+ ip address 172.28.6.1 255.255.255.248
  ip ospf mtu-ignore
  ip ospf 10 area 0
 !
 interface Vlan602
  description Nexus-5k-1
- ip address 10.4.6.9 255.255.255.248
+ ip address 172.28.6.9 255.255.255.248
  ip ospf mtu-ignore
  ip ospf 10 area 0
 !
 interface Vlan603
  description Nexus-5k-2
- ip address 10.4.6.17 255.255.255.248
+ ip address 172.28.6.17 255.255.255.248
  ip ospf mtu-ignore
  ip ospf 10 area 0
 !
@@ -840,12 +951,12 @@ interface Vlan701
  ip address 192.168.70.1 255.255.254.0
 !
 interface Vlan801
- ip address 10.4.248.9 255.255.255.248
+ ip address 172.28.248.9 255.255.255.248
  ip router isis 
  bfd interval 500 min_rx 500 multiplier 3
 !
 interface Vlan802
- ip address 10.4.248.17 255.255.255.248
+ ip address 172.28.248.17 255.255.255.248
  ip router isis 
  bfd interval 500 min_rx 500 multiplier 3
 !
@@ -882,32 +993,40 @@ ip http authentication aaa exec-authorization AUTHZ-EXEC
 ip http authentication aaa command-authorization 15 AUTHZ
 ip http secure-server
 ip http client source-interface Loopback0
-ip route 0.0.0.0 0.0.0.0 10.4.6.6 tag 999 name to-PA3020
-ip route 10.0.0.0 255.0.0.0 10.4.0.1 tag 999 name Corp
-ip route 10.5.0.0 255.255.0.0 10.4.6.6 tag 999 name Azure
-ip route 10.104.0.0 255.252.0.0 10.4.6.5 tag 999 name AWS
-ip route 10.240.0.0 255.255.0.0 10.4.6.5 tag 999 name Azure
-ip route 10.255.0.0 255.255.255.0 10.4.6.5 name AnyConnect
-ip route 10.255.128.0 255.255.252.0 10.4.6.6 tag 999 name GlobalProtect
-ip route 10.4.247.103 255.255.255.255 10.4.254.10 name WTF-3650-staging
-ip route 172.31.0.0 255.255.0.0 10.4.0.1 tag 999
-ip route 172.31.255.254 255.255.255.255 10.4.6.6 tag 999 name Palo-Loopback
-ip route 192.168.1.0 255.255.255.0 10.4.6.6 tag 999 name BB-home-infra
-ip route 192.168.10.0 255.255.255.0 10.4.6.6 tag 999 name BB-home-infra
-ip route 192.168.11.0 255.255.255.0 10.4.6.6 tag 999 name BB-home-lab
-ip route 192.168.12.0 255.255.255.0 10.4.6.6 tag 999 name BB-home-lab
-ip route 192.168.100.0 255.255.255.0 10.4.6.6 tag 999 name CMS-home
-ip route 192.168.101.0 255.255.255.0 10.4.6.6 tag 999 name CMS-home
-ip route vrf Guest-test 0.0.0.0 0.0.0.0 10.4.132.1
+ip route 0.0.0.0 0.0.0.0 172.28.6.6 tag 999 name to-PA3020
+ip route 10.0.0.0 255.0.0.0 172.28.0.1 tag 999 name Corp
+ip route 10.5.0.0 255.255.0.0 172.28.6.6 tag 999 name Azure
+ip route 10.104.0.0 255.252.0.0 172.28.6.5 tag 999 name AWS
+ip route 10.240.0.0 255.255.0.0 172.28.6.5 tag 999 name Azure
+ip route 10.255.0.0 255.255.255.0 172.28.6.5 name AnyConnect
+ip route 10.255.128.0 255.255.252.0 172.28.6.6 tag 999 name GlobalProtect
+ip route 172.16.0.0 255.255.0.0 172.28.0.1 tag 999
+ip route 172.17.0.0 255.255.0.0 172.28.0.1 tag 999 name SLC-Lab
+ip route 172.17.12.5 255.255.255.255 172.28.6.6 tag 999 name SLC-Tenable
+ip route 172.18.0.0 255.255.0.0 172.28.0.1 tag 999
+ip route 172.19.0.0 255.255.0.0 172.28.0.1 tag 999
+ip route 172.25.0.0 255.255.0.0 172.28.0.1 tag 999
+ip route 172.28.88.0 255.255.255.0 172.28.6.6 tag 999 name DMZ
+ip route 172.28.132.0 255.255.255.0 172.28.5.16 tag 999
+ip route 172.28.247.103 255.255.255.255 172.28.254.10 name pdx-3650-staging
+ip route 172.31.0.0 255.255.0.0 172.28.0.1 tag 999
+ip route 172.31.255.254 255.255.255.255 172.28.6.6 tag 999 name Palo-Loopback
+ip route 192.168.1.0 255.255.255.0 172.28.6.6 tag 999 name BB-home-infra
+ip route 192.168.10.0 255.255.255.0 172.28.6.6 tag 999 name BB-home-infra
+ip route 192.168.11.0 255.255.255.0 172.28.6.6 tag 999 name BB-home-lab
+ip route 192.168.12.0 255.255.255.0 172.28.6.6 tag 999 name BB-home-lab
+ip route 192.168.100.0 255.255.255.0 172.28.6.6 tag 999 name CMS-home
+ip route 192.168.101.0 255.255.255.0 172.28.6.6 tag 999 name CMS-home
+ip route vrf Guest-test 0.0.0.0 0.0.0.0 172.28.132.1
 ip route vrf AWS-Test 0.0.0.0 0.0.0.0 192.168.90.1
 ip ssh version 2
 ip scp server enable
 !
 !
 ip access-list standard BB-TOOLS
- permit 10.4.77.10
+ permit 172.28.77.10
 ip access-list standard F5-Lab
- permit 10.4.77.212
+ permit 172.28.77.212
 !
 ip access-list extended AutoQos-4.0-wlan-Acl-Bulk-Data
  permit tcp any any eq 22
@@ -967,14 +1086,14 @@ ip access-list extended PBR-ACL
  deny   ip any 10.0.0.0 0.255.255.255
  deny   ip any 172.16.0.0 0.15.255.255
  deny   ip any 192.168.0.0 0.0.255.255
- permit ip 10.4.89.0 0.0.0.255 any
+ permit ip 172.28.89.0 0.0.0.255 any
 !
 !
-ip prefix-list SDA-FABRIC seq 5 permit 10.4.247.0/24 le 32
-ip prefix-list SDA-FABRIC seq 10 permit 10.4.248.0/24 le 32
+ip prefix-list SDA-FABRIC seq 5 permit 172.28.247.0/24 le 32
+ip prefix-list SDA-FABRIC seq 10 permit 172.28.248.0/24 le 32
 logging history notifications
 logging trap notifications
-logging host 10.4.4.13
+logging host 172.28.4.13
 access-list 100 permit udp any any eq bootps log
 access-list 100 permit udp any any eq bootpc log
 access-list 100 permit ip any any
@@ -990,7 +1109,7 @@ route-map I2O permit 10
 !
 route-map PBR-ASA permit 10 
  match ip address PBR-ACL
- set ip default next-hop 10.4.6.5
+ set ip default next-hop 172.28.6.5
 !
 !
 snmp-server group TOOLS v3 priv read ALL-ACCESS access BB-TOOLS
@@ -1002,9 +1121,9 @@ snmp-server community G0lfc0urs3 RO
 snmp ifmib ifindex persist
 !
 !
-radius server DC01WTF
- address ipv4 10.4.4.253 auth-port 1645 acct-port 1646
- key 7 1112223334445566
+radius server DC01PDX
+ address ipv4 172.28.4.253 auth-port 1645 acct-port 1646
+ key 7 106959150314421E1E1779
 !
 !
 control-plane
@@ -1035,9 +1154,9 @@ monitor session 2 type erspan-source
  source interface Te2/1/3
  destination
   erspan-id 2
-  ip address 10.4.87.213
+  ip address 172.28.87.213
   ip ttl 32
-  origin ip address 10.4.247.100
+  origin ip address 172.28.247.100
 !
 !
 ntp server 129.6.15.28
