--- a/updates/172.28.247.102_updates.conf
+++ b/updates/172.28.247.102_updates.conf
@@ -1,4 +1,7 @@
+device-sensor filter-list lldp list iseLLDP
+ server name 10.4.87.25
 aaa authentication login default local group ISE
+ client 10.4.87.25 server-key 7 blahblah
 !
 interface GigabitEthernet1/0/12
  description Workstation_Phone
@@ -8,9 +11,7 @@ interface GigabitEthernet1/0/13
  switchport access vlan 432
  switchport voice vlan 429
  access-session port-control auto
- mab
  snmp trap mac-notification change added
  snmp trap mac-notification change removed
- dot1x pae authenticator
  spanning-tree portfast
  service-policy type control subscriber POLICY_DOT1X
