--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,50 @@
 appdirs==1.4.3
+bcrypt==3.2.0
 CacheControl==0.12.6
 certifi==2019.11.28
+cffi==1.14.4
 chardet==3.0.4
 ciscoconfparse==1.5.22
 colorama==0.4.3
 contextlib2==0.6.0
+cryptography==3.3.1
 distlib==0.3.0
 distro==1.4.0
 dnspython==2.0.0
+future==0.18.2
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
+Jinja2==2.11.2
+junos-eznc==2.5.4
 lockfile==0.12.2
+lxml==4.6.2
+MarkupSafe==1.1.1
 msgpack==0.6.2
+napalm==3.2.0
+ncclient==0.6.9
+netaddr==0.8.0
+netmiko==3.3.2
+ntc-templates==1.6.0
 packaging==20.3
+paramiko==2.7.2
 passlib==1.7.4
 pep517==0.8.2
 progress==1.5
+pycparser==2.20
+pyeapi==0.8.4
+PyNaCl==1.4.0
 pyparsing==2.4.6
+pyserial==3.5
 pytoml==0.1.21
+PyYAML==5.3.1
 requests==2.22.0
 retrying==1.3.3
+scp==0.13.3
 six==1.14.0
+tenacity==6.3.1
+textfsm==1.1.0
+transitions==0.8.6
 urllib3==1.25.8
 webencodings==0.5.1
+yamlordereddictloader==0.4.0
